--- a/insurance/templates/calc/kasko/step6.html
+++ b/insurance/templates/calc/kasko/step6.html
@@ -60,11 +60,12 @@
                 location.href = "{{ back }}";
             });
 
-            $("form#step").submit(function(){
+/*            $("form#step").submit(function(){
                 if(checkAllINputs() == false){
                     return false;
                 }
             })
+            */
 
             $("#id_date").datepicker({
                changeMonth: true,
