Added IFL servlet url. ref #67

--- a/insurance/local_settings.py.tmpl
+++ b/insurance/local_settings.py.tmpl
@@ -44,7 +44,8 @@ SERVLET_DB_USER = 'insdu'
 SERVLET_DB_PASS = 'insdpwd'
 
 SERVLET_URL = {"kasko": 'http://www.polisbook.ru:8080/ServerIF/MatrixIF',
-               "osago": 'http://www.polisbook.ru:8080/ServerOsago/PB_Osago'}
+               "osago": 'http://www.polisbook.ru:8080/ServerOsago/PB_Osago',
+               "ifl": "http://www.polisbook.ru:8080/ServerProperty/PB_Property"}
 
 SERVLET_FAKE = False
 
