--- a/insurance/templates/calc/kasko/step2.html
+++ b/insurance/templates/calc/kasko/step2.html
@@ -106,7 +106,7 @@
 {% endblock %}
 
 {% block tab_content %}
-
+{% load intspace %}
             <div class="form-round-block">
                 <h2>Сортировать по:</h2>
 
@@ -221,7 +221,7 @@
                         <div id="autodata-step1">
                             Вы страхуете:
                             <span>{{ data.mark }} {{ data.model }}</span>
-                            {{ data.model_year }} года, {{ data.price }} руб.
+                            {{ data.model_year }} г., {{ data.price|intspace }} руб.
                         </div>
                         {% load stars %}
                         <table border="1">
