--- a/insurance/templates/calc/kasko/step5.html
+++ b/insurance/templates/calc/kasko/step5.html
@@ -88,6 +88,8 @@
                $("#id_body_number").val($(this).val());
             });
 
+            $("#id_volume, #id_power").attr("maxlength", 4);
+
             });
     </script>
 {% endblock %}
