--- a/insurance/templates/calc/kasko/step3reg.html
+++ b/insurance/templates/calc/kasko/step3reg.html
@@ -7,6 +7,7 @@
 {% endblock %}
 
 {% block tab_content %}
+{% load intspace %}
             <div class="form-round-block">
                 <form action="" method="post">
 
@@ -37,7 +38,7 @@
                         </tr>
                         <tr>
                             <td>Стоимость</td>
-                            <td>{{ data.price }}</td>
+                            <td>{{ data.price|intspace }} руб.</td>
                         </tr>
                         <tr>
                             <td>Кредит</td>
