--- a/insurance/templates/calc/osago/step2.html
+++ b/insurance/templates/calc/osago/step2.html
@@ -119,6 +119,10 @@
 
                             <table id="sort-parameters" class="osago">
                                 <tr>
+                                    <td>Цена</td>
+                                    <td>
+                                        <div class="style-checkbox">{{ s1_form.factor_price }}</div>
+                                    </td>
                                     <td>Расположение</td>
                                     <td>
                                         <div class="style-checkbox">{{ s1_form.factor_accessibility }}</div>
@@ -127,10 +131,10 @@
                                     <td>
                                         <div class="style-checkbox">{{ s1_form.factor_service }}</div>
                                     </td>
-                                    <td>Качество инф.
+                                    <td rowspan="2">Качество информационной
                                         поддержки
                                     </td>
-                                    <td>
+                                    <td rowspan="2">
                                         <div class="style-checkbox">{{ s1_form.factor_qualitysupport }}</div>
                                     </td>
                                 </tr>
@@ -147,6 +151,8 @@
                                     <td>
                                         <div class="style-checkbox">{{ s1_form.factor_easepay }}</div>
                                     </td>
+                                    <td></td>
+                                    <td></td>
                                 </tr>
                             </table>
                             <a id="second-submit" href="#"><img src="/static/images/recount_button.png"
