Visual restriction for mileage field, step5.

--- a/insurance/templates/calc/kasko/step5.html
+++ b/insurance/templates/calc/kasko/step5.html
@@ -89,6 +89,7 @@
             });
 
             $("#id_volume, #id_power").attr("maxlength", 4);
+            $("#id_mileage").attr("maxlength", 6);
 
             transform_select2("#fake-select");
 
