--- a/insurance/templates/calc/osago/step3reg.html
+++ b/insurance/templates/calc/osago/step3reg.html
@@ -7,6 +7,7 @@
 {% endblock %}
 
 {% block tab_content %}
+<div class="step3-header">Данные полиса</div>
             <div class="form-round-block">
                 <form action="" method="post">
 
