--- a/insurance/static/css/style.css
+++ b/insurance/static/css/style.css
@@ -3958,3 +3958,14 @@ ul.step-ui-tabs-nav li.ui-state-hover{
 #calc-tabs .ui-widget-header {
     border-width: 0px !important;
 }
+
+.step3-header {
+    background: url('/static/images/step3_tab_back.png') 0% 0% no-repeat;
+    height: 35px;
+    width: 262px;
+    margin-bottom: 5px;
+    color: #fff;
+    line-height: 32px;
+    text-align: center;
+    font-size: 1.25em;
+}
