--- a/insurance/templates/calc/kasko/step3noreg.html
+++ b/insurance/templates/calc/kasko/step3noreg.html
@@ -8,6 +8,7 @@
 
 {% block tab_content %}
 {% load intspace %}
+<div class="step3-header">Данные полиса</div>
             <div class="form-round-block clear-float">
                 <form action="" method="post">
 
