--- a/insurance/templates/calc/osago/step3noreg.html
+++ b/insurance/templates/calc/osago/step3noreg.html
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block tab_content %}
-
+<div class="step3-header">Данные полиса</div>
             <div class="form-round-block clear-float">
                 <form action="" method="post">
 
