Proper comments and conditionts in IFL calc. ref #67

--- a/insurance/templates/calc/ifl/step1.html
+++ b/insurance/templates/calc/ifl/step1.html
@@ -27,7 +27,7 @@
                     get_visible_select_data($(this).attr("id"));
                 });
 
-                var nextRows = $(this).parents("tr").not(".hide");
+                var nextRows = $(this).parents("tr").nextAll().not(".hide");
 
                 if ($("#id_property").val() != "") {
                     nextRows.show();
