--- a/insurance/templates/calc/ifl/step2.html
+++ b/insurance/templates/calc/ifl/step2.html
@@ -131,19 +131,19 @@
                         <map id="map-table" name="result_table_header">
                             <area shape="poly"
                                   coords="202,164,201,161,203,154,214,141,240,113,267,83,296,50,320,20,330,9,330,5,329,3,329,2,385,2,385,5,385,9,383,13,351,50,306,102,260,155,258,160,258,162,259,164,259,166,203,166,202,164,202,159"
-                                  href="#" alt="{{ header.InsuranceLimit.comment }}" title="">
+                                  href="#" alt="{{ header.InsuranceOnLimit.comment }}" title="">
                             <area shape="poly"
                                   coords="320,166,316,163,317,158,321,153,336,135,357,113,381,85,407,54,427,30,442,13,445,7,443,1,387,1,388,4,386,12,369,28,333,73,300,111,276,138,259,156,259,161,261,165,319,165"
-                                  href="#" alt="{{ header.GatheringInqueries.comment }}" title="">
+                                  href="#" alt="{{ header.GatheringOfInquiries.comment }}" title="">
                             <area shape="poly"
                                   coords="321,165,318,162,319,156,434,24,446,10,447,4,443,1,501,1,502,4,500,9,498,11,501,4,502,8,498,14,374,158,374,161,375,165,376,166,319,166"
                                   href="#" alt="{{ header.PaymentWithoutInquiries.comment }}" title="">
                             <area shape="poly"
                                   coords="431,162,433,157,554,17,560,11,561,7,560,4,560,1,504,2,504,4,504,6,503,11,378,155,376,158,376,162,376,165,434,165"
-                                  href="#" alt="{{ header.Franchise.comment }}" title="">
+                                  href="#" alt="{{ header.TheObligatoryFranchize.comment }}" title="">
                             <area shape="poly"
                                   coords="493,164,491,160,492,154,505,143,552,86,588,45,614,14,617,9,617,4,617,1,562,2,562,6,558,11,443,148,434,157,433,162,433,165,491,165"
-                                  href="#" alt="{{ header.TimeFranchise.comment }}" title="">
+                                  href="#" alt="{{ header.TheTemporaryFranchize.comment }}" title="">
                         </map>
                         <!-- End of Client Side Image Map -->
 
@@ -179,7 +179,7 @@
                                         </div>
                                     </td>
                                     <td class="small">
-                                        {% if comp.parameters.InsuranceLimit %}
+                                        {% if comp.parameters.InsuranceOnLimit %}
                                             <img src="/static/images/check_mark.png" alt="да"/>
                                         {% endif %}
                                     </td>
@@ -189,17 +189,17 @@
                                         {% endif %}
                                     </td>
                                     <td class="small">
-                                        {% if comp.parameters.TheEmergencyCommissioner %}
+                                        {% if comp.parameters.PaymentWithoutInquiries %}
                                             <img src="/static/images/check_mark.png" alt="да"/>
                                         {% endif %}
                                     </td>
                                     <td class="small">
-                                        {% if comp.parameters.Franchise %}
+                                        {% if comp.parameters.TheObligatoryFranchize %}
                                             <img src="/static/images/check_mark.png" alt="да"/>
                                         {% endif %}
                                     </td>
                                     <td class="small">
-                                        {% if comp.parameters.TimeFranchise %}
+                                        {% if comp.parameters.TheTemporaryFranchize %}
                                             <img src="/static/images/check_mark.png" alt="да"/>
                                         {% endif %}
                                     </td>
