--- a/insurance/templates/calc/osago/step1.html
+++ b/insurance/templates/calc/osago/step1.html
@@ -4,6 +4,7 @@
     <script type="text/javascript" src="/static/js/jquery-ui-1.8.16.custom.min.js"></script>
     <script type="text/javascript" src="/static/js/jquery.mousewheel.js"></script>
     <script type="text/javascript" src="/static/js/calc/jscrollpane.js"></script>
+    <script type="text/javascript" src="/static/js/jquery.meio.mask.min.js"></script>
 
     <script type="text/javascript">
         var model = "{% url get_models %}",
@@ -175,6 +176,17 @@
 
             //Clear additional drivers info
             $("#info-main-driver .hide select").val("");
+
+            $.mask.masks.msk = {mask: "999 999 999", type: "reverse"}
+            $("#current").setMask();
+
+            $("#form-step1").submit(function() {
+              var v = $("#id_dago").val();
+              v = v.replace(/ /g, "");
+              $("#id_dago").val(v);
+
+              return true;
+            });
         })
     </script>
 {% endblock %}
