--- a/insurance/templates/base.html
+++ b/insurance/templates/base.html
@@ -14,6 +14,7 @@
     <script src="{{ STATIC_URL }}js/jquery.ui.widget.js"></script>
     <script src="{{ STATIC_URL }}js/jquery.ui.mouse.js"></script>
     <script src="{{ STATIC_URL }}js/jquery.ui.slider.js"></script>
+    <script src="{{ STATIC_URL }}js/jquery.ui.position.min.js"></script>
 
    <script>
     $(document).ready(function() {
